--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* index.css or a similar global CSS file */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +18,32 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* index.css or a similar global CSS file */
+.slider-container {
+  width: 80%;
+  margin: 40px auto; /* Center the slider and add space above and below */
+  max-width: 1200px;
+}
+
+.slider-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider-image {
+  width: 100%;
+  max-width: 300px; /* Set a max width for the images */
+  height: 300px; /* Set a fixed height for the images */
+  object-fit: cover; /* Ensures the image covers the area without stretching */
+}
+
+.bg-home {
+  @apply bg-home-bg;
+}
+
+.font-hero {
+  @apply font-hero-font;
 }
